--- a/app/blocks/section/section.scss
+++ b/app/blocks/section/section.scss
@@ -3,10 +3,23 @@
 
   display: block;
   width: 100%;
-  margin-bottom: 100px;
+  margin-bottom: 126px;
 
   &_bg {
     color: $color-white;
+    margin-bottom: 95px;
+  }
+
+  &_mid-mg {
+    margin-bottom: 118px;
+  }
+
+  &_sm-mg {
+    margin-bottom: 100px;
+  }
+
+  &_promo {
+    margin-bottom: 89px;
   }
 
   &__wrapper {
@@ -32,7 +45,7 @@
   &__header {
     display: block;
     width: 100%;
-    margin-bottom: 60px;
+    margin-bottom: 56px;
 
     #{$b}_bg & {
       margin-bottom: 62px;
