--- a/app/layouts/_internalIncludes.pug
+++ b/app/layouts/_internalIncludes.pug
@@ -1,13 +1,16 @@
 include ../blocks/accordion/accordion
 include ../blocks/avatar/avatar
+include ../blocks/boxes/boxes
 include ../blocks/breadcrumbs/breadcrumbs
 include ../blocks/burger/burger
+include ../blocks/button-heart/button-heart
 include ../blocks/button/button
 include ../blocks/close/close
 include ../blocks/content-zone/content-zone
 include ../blocks/divider/divider
 include ../blocks/dropdown/dropdown
 include ../blocks/facil-list/facil-list
+include ../blocks/filter-reset/filter-reset
 include ../blocks/form-elements/form-elements
 include ../blocks/grid/grid
 include ../blocks/header-menu/header-menu
@@ -18,6 +21,7 @@ include ../blocks/lists/lists
 include ../blocks/logo/logo
 include ../blocks/map/map
 include ../blocks/nav-list/nav-list
+include ../blocks/news/news
 include ../blocks/overlay/overlay
 include ../blocks/page/page
 include ../blocks/popups/popups
@@ -29,16 +33,19 @@ include ../blocks/short-profile/short-profile
 include ../blocks/slider/slider
 include ../blocks/social/social
 include ../blocks/socials/socials
+include ../blocks/space/space
 include ../blocks/table/table
 include ../blocks/tabs/tabs
 include ../blocks/text-list/text-list
 include ../blocks/user-link/user-link
 include ../components/banner/banner
 include ../components/breadcrumbs-box/breadcrumbs-box
+include ../components/compact-filter/compact-filter
+include ../components/condition-search/condition-search
 include ../components/content-left/content-left
 include ../components/content/content
+include ../components/filter/filter
 include ../components/footer/footer
 include ../components/header/header
-include ../components/info/info
 include ../components/main-menu/main-menu
-include ../components/ui-kit/ui-kit
+include ../components/ui-kit/ui-kit
