--- a/app/pages/page1/page1.pug
+++ b/app/pages/page1/page1.pug
@@ -11,32 +11,32 @@ block content
     .container.container_slider
       h3.slider-title You may also like spaces around
         span.slider-title_span Kensington
-      +slider-two(false, true)
-        +slide-two
-          img(src='./assets/images/sbo.jpg').slide-index
-          .slider-cube
-            .cube
-          .slider-title__slide TOG - Henry Wood House
-          .slider-plach W1W, London
-        +slide-two
-          img(src='./assets/images/sbt.jpg').slide-index
-          .slider-cube
-            .cube.cube_yellow
-            .cube.cube_red
-            .cube.cube_blue
-          .slider-title__slide Blooming Founders (Former Blooms Lon Former Blooms Lon )
-          .slider-plach EC2A, London
-        +slide-two
-          img(src='./assets/images/sbth.jpg').slide-index
-          .slider-cube
-            .cube.cube_yellow
-            .cube.cube_red
-            .cube.cube_blue
-          .slider-title__slide Blooming Founders (Former Blooms Lon Former Blooms Lon ) Blooming Founders (Former Blooms Lon Former Blooms Lon )
-          .slider-plach EC2A, London
-        +slide-two
-          img(src='./assets/images/sbf.jpg').slide-index
-          .slider-cube
-            .cube.cube_yellow
-          .slider-title__slide Blooming Founders (Former Blooms Lon Blooming Founders (Former Blooms Lon Former Blooms Lon )
-          .slider-plach EC2A, London
+      //- +slider-two(false, true)
+      //-   +slide-two
+      //-     img(src='./assets/images/sbo.jpg').slide-index
+      //-     .slider-cube
+      //-       .cube
+      //-     .slider-title__slide TOG - Henry Wood House
+      //-     .slider-plach W1W, London
+      //-   +slide-two
+      //-     img(src='./assets/images/sbt.jpg').slide-index
+      //-     .slider-cube
+      //-       .cube.cube_yellow
+      //-       .cube.cube_red
+      //-       .cube.cube_blue
+      //-     .slider-title__slide Blooming Founders (Former Blooms Lon Former Blooms Lon )
+      //-     .slider-plach EC2A, London
+      //-   +slide-two
+      //-     img(src='./assets/images/sbth.jpg').slide-index
+      //-     .slider-cube
+      //-       .cube.cube_yellow
+      //-       .cube.cube_red
+      //-       .cube.cube_blue
+      //-     .slider-title__slide Blooming Founders (Former Blooms Lon Former Blooms Lon ) Blooming Founders (Former Blooms Lon Former Blooms Lon )
+      //-     .slider-plach EC2A, London
+      //-   +slide-two
+      //-     img(src='./assets/images/sbf.jpg').slide-index
+      //-     .slider-cube
+      //-       .cube.cube_yellow
+      //-     .slider-title__slide Blooming Founders (Former Blooms Lon Blooming Founders (Former Blooms Lon Former Blooms Lon )
+      //-     .slider-plach EC2A, London
