--- a/app/styles/helpers/_text-styles.scss
+++ b/app/styles/helpers/_text-styles.scss
@@ -78,6 +78,18 @@
   letter-spacing: -.02em;
 }
 
+@mixin text13 {
+  font-size: 13px;
+  line-height: (26/13);
+  letter-spacing: -.02em;
+}
+
+@mixin text12 {
+  font-size: 12px;
+  line-height: (26/12);
+  letter-spacing: -.02em;
+}
+
 @mixin text-small {
   font-size: 11px;
   line-height: 1.65;
