--- a/app/styles/helpers/_variables.scss
+++ b/app/styles/helpers/_variables.scss
@@ -53,6 +53,12 @@ $color-header-logo: #415a65;
 $color-scroll-light: #dbe2eb;
 $color-scroll-dark: #272825;
 $color-shadow: #222a2e;
+$color-hot-desk: $color-yellow;
+$color-dedicated-desk: $color-red;
+$color-meeting-room: $color-blue;
+$color-office-space: $color-green;
+$color-heart: #e8502d;
+$color-gray-darkest: #1d2120;
 // ##########
 // Transitions
 // ##########
