--- a/app/pages/ui-kit/ui-kit.pug
+++ b/app/pages/ui-kit/ui-kit.pug
@@ -5,7 +5,7 @@ block head
 
 block content
   +ui-kit
-    +e.navigation
+    +e.navigation.js-scrollbar-light
       +e.navigation-burger
       +e.UL.navigation__list
 
@@ -140,12 +140,6 @@ block content
           +col(3)
           +col(3)
             +scroll-form
-
-    +ui-section
-    +ui-section-content()
-        +grid
-          +col(12)
-            +info
 
     //- Кнопки
     +ui-section
@@ -335,11 +329,11 @@ block content
         p Блок: blocks/slider/slider
       +ui-section-content()
         +ui-description .js-slider
-        +slider(true, true)
-          +slide Привет
-          +slide Привет
-          +slide Привет
-          +slide Привет
+        //- +slider(true, true)
+        //-   +slide Привет
+        //-   +slide Привет
+        //-   +slide Привет
+        //-   +slide Привет
 
     //- Подсказки
     +ui-section
@@ -544,6 +538,108 @@ block content
       +ui-section-content
         +ui-description .nav-list
         +nav-list(getData('main-menu-top.json'))
+
+    //- Divider
+    +ui-section
+      +ui-section-head
+        h2 Разделительная полоса
+        p Блок: blocks/divider
+      +ui-section-content
+        +ui-description .divider
+        +divider
+
+    //- Section
+    +ui-section
+      +ui-section-head
+        h2 Секции
+        p Блок: blocks/section
+      +ui-section-content
+        +ui-description .section_bg._promo
+    +section._bg._promo
+      .container
+        +section-wrapper
+          +section-bg('assets/images/section-bg.jpg')
+          +section-content
+            +section-header
+              +section-title('h2')._big Thousands of&nbsp;professionals prefer to&nbsp;search for perfect workplace on&nbsp;Space Pool
+              +button()(href="#") Find out why
+            +section-footer
+              +e.note_mb15 Today Space Pool is&nbsp;about searching for greatest and most amazing workplaces around London. It&rsquo;s like visiting hundreds of&nbsp;places whithout even leaving your room.
+    +ui-section
+      +ui-section-content
+        +ui-description .section_bg._lead
+    +section._bg._lead
+      .container
+        +section-wrapper
+          +section-bg('assets/images/main-lead.jpg')
+          +section-content
+            +section-header
+              +e.lead_left
+                +section-title('h2')._big The place where you can find your dream workspace.
+              +e.lead_right Additional Content
+            +section-footer
+              +e.note Between 2&nbsp;960&nbsp;offices, 380 conversation rooms and over 15&nbsp;000 free co-working desks
+
+    //- Boxes
+    +ui-section
+      +ui-section-head
+        h2 Маркеры помещений (цветные квадраты)
+        p Блок: blocks/boxes
+      +ui-section-content
+        +ui-description .boxes
+        +boxes
+          +box._orange
+          +box._red
+          +box._blue
+          +box._green
+        +ui-description .boxes._big
+        +boxes._big
+          +box._orange
+          +box._red
+          +box._blue
+          +box._green
+
+    //- Button heart
+    +ui-section
+      +ui-section-head
+        h2 Кнопка сердечко
+        p Блок: blocks/button-heart
+      +ui-section-content
+        +ui-description .button-heart
+        +button-heart
+        +ui-description .button-heart.is-active - активное состояние
+        +button-heart.is-active
+
+        +ui-description .button-heart.js-heart - переключает состояние
+        +button-heart.js-heart
+
+    //- Spaces
+    - var space = {img: "assets/images/space1.jpg", boxes: {box1: {class: "_orange"}, box2: {class: "_red"}, box3: {class: "_blue"}, box4: {class: "_green"}},title: "TOG - Henry Wood House",location: "W1W, London"};
+    - var room = {img: "assets/images/room1.jpg", seats: "18 seats", title: "TOG - Henry Wood House", location: "W1W, London"};
+    +ui-section
+      +ui-section-head
+        h2 Spaces
+        p Блок: blocks/space
+      +ui-section-content
+        +ui-description .space
+        +grid
+          +col(3)
+            +space(space)
+          +col(3)
+            +space(room)
+
+    //- Spaces
+    - var news = {img: "assets/images/news1.jpg", date: "September 9", title: "The perfect Workplace Do&nbsp;exist.&nbsp;5&nbsp;simple steps to&nbsp;make the office of&nbsp;your drem.", info: "For many employers, career success is&nbsp;desired. Establishing a&nbsp;profitable company, we&rsquo;re looking for the best candidates only, whose knowledge and experience can help to&nbsp;achieve career goals."};
+    +ui-section
+      +ui-section-head
+        h2 News
+        p Блок: blocks/news
+      +ui-section-content
+        +ui-description .news
+        +grid
+          +col(3)
+            +news(news)
+
 
   script
     |
