--- a/app/blocks/news/news.scss
+++ b/app/blocks/news/news.scss
@@ -21,6 +21,10 @@
 
     &:not(:last-child) {
       margin-bottom: 10px;
+
+      @include screen('lg') {
+        margin-bottom: 17px;
+      }
     }
   }
 
@@ -31,6 +35,7 @@
   &__date {
     @include text16;
 
+    display: inline-block;
     width: 100%;
     color: $color-gray-darkest;
     font-weight: 700;
@@ -42,7 +47,7 @@
     }
 
     &:not(:last-child) {
-      margin-bottom: 16px;
+      margin-bottom: 6px;
     }
   }
 
@@ -58,7 +63,7 @@
     }
 
     &:not(:last-child) {
-      margin-bottom: 15px;
+      margin-bottom: 10px;
     }
 
     #{$b}:hover & {
