--- a/app/blocks/socials/socials.scss
+++ b/app/blocks/socials/socials.scss
@@ -2,12 +2,14 @@
   $b: &;
 
   display: flex;
+  font-size: 0;
+  line-height: 0;
 
   &__item {
     &:not(:last-child) {
       margin-right: 18px;
 
-      #{$b}_big {
+      #{$b}_big & {
         margin-right: 22px;
       }
     }
