--- a/app/components/footer/footer.scss
+++ b/app/components/footer/footer.scss
@@ -1,7 +1,6 @@
 .footer {
   display: block;
-  margin-top: 20px;
-  border-top: 1px solid $color-basic;
+  border-top: 1px solid rgba($color-basic-light, .21);
   padding: 70px 0 0 0;
   overflow: hidden;
 
