--- a/app/pages/index/index.pug
+++ b/app/pages/index/index.pug
@@ -35,7 +35,7 @@ block content
       +section-content
         +map()._big#mapTwo
   +section._sm-mg
-    +section-header
+    +section-header._tab-smmg
       .container
         +section-title('h2') Meeting Rooms
     +section-content
@@ -53,7 +53,7 @@ block content
             +button()(href="#") Find out why
           +section-footer
             +e.note_mb15 Today Space Pool is&nbsp;about searching for greatest and most amazing workplaces around London. It&rsquo;s like visiting hundreds of&nbsp;places whithout even leaving your room.
-  +section
+  +section._ltl-mg
     +section-header
       .container
         +section-title('h2') New Places
@@ -62,10 +62,13 @@ block content
         each item in spacesNew
           +slide
             +space(item)
-  +section
-    +section-header
+  +section._mg
+    +section-header._subscribe
       .container
         +section-title('h2') Articles
+        +e.socials
+          +e.note._mb15._bold Subscribe to our Social Media channels:
+          +socials-big
     +section-content
       +slider(true, false).js-slider-news
         each item in news
