--- a/app/blocks/space/space.scss
+++ b/app/blocks/space/space.scss
@@ -21,6 +21,10 @@
 
     &:not(:last-child) {
       margin-bottom: 10px;
+
+      @include screen('lg') {
+        margin-bottom: 4px;
+      }
     }
   }
 
@@ -59,6 +63,10 @@
   &__boxes {
     width: 100%;
     margin-top: -6px;
+
+    @include screen('lg') {
+      margin-top: 0px;
+    }
 
     &:not(:last-child) {
       margin-bottom: 8px;
